# py-logto-admin

./: LICENSE  README.md  dev.py  logto-admin.conf.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
docs/: versioning.md
logto_admin/: __init__.py  token_manager.py
logto_admin/models/: __init__.py  delete_api_applications_application_id_user_consent_scopes_scope_type_scope_id_scope_type.py  delete_api_configs_jwt_customizer_token_type_path_token_type_path.py  delete_api_configs_oidc_key_type_key_id_key_type.py  delete_api_custom_phrases_language_tag_language_tag.py  delete_api_users_user_id_identities_target_response_200.py  delete_api_users_user_id_identities_target_response_200_custom_data.py  delete_api_users_user_id_identities_target_response_200_identities.py  delete_api_users_user_id_identities_target_response_200_identities_additional_property.py  delete_api_users_user_id_identities_target_response_200_identities_additional_property_details.py  delete_api_users_user_id_identities_target_response_200_profile.py  delete_api_users_user_id_identities_target_response_200_profile_address.py  delete_api_users_user_id_identities_target_response_200_sso_identities_item.py  delete_api_users_user_id_identities_target_response_200_sso_identities_item_detail.py  get_api_applications_application_id_roles_response_200_item.py  get_api_applications_application_id_roles_response_200_item_type.py  get_api_applications_application_id_sign_in_experience_response_200.py  get_api_applications_id_response_200.py  (+830 more)
src/: config.yaml
(+191 files in other folders)
