[tool.poetry]
name = "logto-admin"
version = "0.117.3"
description = "Python client for Logto Management API"
authors = [
    "Iaroslav Semennikov <ysmnnkv@gmail.com>",
]
readme = "README.md"
packages = [
    {include = "logto_admin"},
]
include = ["CHANGELOG.md", "logto_admin/py.typed"]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
